// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Get video metdata Should get metadata (building.mp4) 1`] = `
Object {
  "buffer": Object {
    "chapters": Array [],
    "format": Object {
      "bit_rate": 2876684,
      "duration": 14.6,
      "format_long_name": "QuickTime / MOV",
      "format_name": "mov,mp4,m4a,3gp,3g2,mj2",
      "nb_programs": 0,
      "nb_streams": 1,
      "probe_score": 100,
      "size": 5249950,
      "start_time": 0,
      "tags": Object {
        "compatible_brands": "mp42mp41isomavc1",
        "creation_time": "2019-02-19T10:21:11.000000Z",
        "major_brand": "mp42",
        "minor_version": "0",
      },
    },
    "streams": Array [
      Object {
        "avg_frame_rate": "30/1",
        "bit_rate": 2873072,
        "bits_per_raw_sample": 8,
        "chroma_location": "left",
        "closed_captions": 0,
        "codec_long_name": "H.264 / AVC / MPEG-4 AVC / MPEG-4 part 10",
        "codec_name": "h264",
        "codec_tag": "0x31637661",
        "codec_tag_string": "avc1",
        "codec_time_base": "1/60",
        "codec_type": "video",
        "coded_height": 720,
        "coded_width": 1280,
        "color_primaries": "bt709",
        "color_range": "tv",
        "color_space": "bt709",
        "color_transfer": "bt709",
        "display_aspect_ratio": "N/A",
        "disposition": Object {
          "attached_pic": 0,
          "clean_effects": 0,
          "comment": 0,
          "default": 1,
          "dub": 0,
          "forced": 0,
          "hearing_impaired": 0,
          "karaoke": 0,
          "lyrics": 0,
          "original": 0,
          "timed_thumbnails": 0,
          "visual_impaired": 0,
        },
        "duration": 14.6,
        "duration_ts": 438,
        "field_order": "unknown",
        "has_b_frames": 2,
        "height": 720,
        "id": "N/A",
        "index": 0,
        "is_avc": "true",
        "level": 32,
        "max_bit_rate": "N/A",
        "nal_length_size": 4,
        "nb_frames": 438,
        "nb_read_frames": "N/A",
        "nb_read_packets": "N/A",
        "pix_fmt": "yuv420p",
        "profile": "High",
        "r_frame_rate": "30/1",
        "refs": 1,
        "sample_aspect_ratio": "N/A",
        "start_pts": 0,
        "start_time": 0,
        "tags": Object {
          "creation_time": "2019-02-19T10:21:11.000000Z",
          "encoder": "AVC Coding",
          "handler_name": "L-SMASH Video Handler",
          "language": "und",
        },
        "time_base": "1/30",
        "timecode": "N/A",
        "width": 1280,
      },
    ],
  },
  "string": Object {
    "chapters": Array [],
    "format": Object {
      "bit_rate": 2876684,
      "duration": 14.6,
      "format_long_name": "QuickTime / MOV",
      "format_name": "mov,mp4,m4a,3gp,3g2,mj2",
      "nb_programs": 0,
      "nb_streams": 1,
      "probe_score": 100,
      "size": 5249950,
      "start_time": 0,
      "tags": Object {
        "compatible_brands": "mp42mp41isomavc1",
        "creation_time": "2019-02-19T10:21:11.000000Z",
        "major_brand": "mp42",
        "minor_version": "0",
      },
    },
    "streams": Array [
      Object {
        "avg_frame_rate": "30/1",
        "bit_rate": 2873072,
        "bits_per_raw_sample": 8,
        "chroma_location": "left",
        "closed_captions": 0,
        "codec_long_name": "H.264 / AVC / MPEG-4 AVC / MPEG-4 part 10",
        "codec_name": "h264",
        "codec_tag": "0x31637661",
        "codec_tag_string": "avc1",
        "codec_time_base": "1/60",
        "codec_type": "video",
        "coded_height": 720,
        "coded_width": 1280,
        "color_primaries": "bt709",
        "color_range": "tv",
        "color_space": "bt709",
        "color_transfer": "bt709",
        "display_aspect_ratio": "N/A",
        "disposition": Object {
          "attached_pic": 0,
          "clean_effects": 0,
          "comment": 0,
          "default": 1,
          "dub": 0,
          "forced": 0,
          "hearing_impaired": 0,
          "karaoke": 0,
          "lyrics": 0,
          "original": 0,
          "timed_thumbnails": 0,
          "visual_impaired": 0,
        },
        "duration": 14.6,
        "duration_ts": 438,
        "field_order": "unknown",
        "has_b_frames": 2,
        "height": 720,
        "id": "N/A",
        "index": 0,
        "is_avc": "true",
        "level": 32,
        "max_bit_rate": "N/A",
        "nal_length_size": 4,
        "nb_frames": 438,
        "nb_read_frames": "N/A",
        "nb_read_packets": "N/A",
        "pix_fmt": "yuv420p",
        "profile": "High",
        "r_frame_rate": "30/1",
        "refs": 1,
        "sample_aspect_ratio": "N/A",
        "start_pts": 0,
        "start_time": 0,
        "tags": Object {
          "creation_time": "2019-02-19T10:21:11.000000Z",
          "encoder": "AVC Coding",
          "handler_name": "L-SMASH Video Handler",
          "language": "und",
        },
        "time_base": "1/30",
        "timecode": "N/A",
        "width": 1280,
      },
    ],
  },
}
`;

exports[`Get video metdata Should get metadata (building.wmv) 1`] = `
Object {
  "buffer": Object {
    "chapters": Array [],
    "format": Object {
      "bit_rate": 5520248,
      "duration": 14.6,
      "format_long_name": "ASF (Advanced / Active Streaming Format)",
      "format_name": "asf",
      "nb_programs": 0,
      "nb_streams": 1,
      "probe_score": 100,
      "size": 10074453,
      "start_time": 0,
      "tags": Object {
        "compatible_brands": "mp42mp41isomavc1",
        "encoder": "Lavf58.26.101",
        "major_brand": "mp42",
        "minor_version": "0",
      },
    },
    "streams": Array [
      Object {
        "avg_frame_rate": "30/1",
        "bit_rate": "N/A",
        "bits_per_raw_sample": "N/A",
        "chroma_location": "unspecified",
        "closed_captions": 0,
        "codec_long_name": "Windows Media Video 8",
        "codec_name": "wmv2",
        "codec_tag": "0x32564d57",
        "codec_tag_string": "WMV2",
        "codec_time_base": "1/30",
        "codec_type": "video",
        "coded_height": 720,
        "coded_width": 1280,
        "color_primaries": "unknown",
        "color_range": "unknown",
        "color_space": "unknown",
        "color_transfer": "unknown",
        "display_aspect_ratio": "N/A",
        "disposition": Object {
          "attached_pic": 0,
          "clean_effects": 0,
          "comment": 0,
          "default": 0,
          "dub": 0,
          "forced": 0,
          "hearing_impaired": 0,
          "karaoke": 0,
          "lyrics": 0,
          "original": 0,
          "timed_thumbnails": 0,
          "visual_impaired": 0,
        },
        "duration": 14.6,
        "duration_ts": 14600,
        "field_order": "unknown",
        "has_b_frames": 0,
        "height": 720,
        "id": "N/A",
        "index": 0,
        "level": "-99",
        "max_bit_rate": "N/A",
        "nb_frames": "N/A",
        "nb_read_frames": "N/A",
        "nb_read_packets": "N/A",
        "pix_fmt": "yuv420p",
        "profile": "unknown",
        "r_frame_rate": "30/1",
        "refs": 1,
        "sample_aspect_ratio": "N/A",
        "start_pts": 0,
        "start_time": 0,
        "time_base": "1/1000",
        "timecode": "N/A",
        "width": 1280,
      },
    ],
  },
  "string": Object {
    "chapters": Array [],
    "format": Object {
      "bit_rate": 5520248,
      "duration": 14.6,
      "format_long_name": "ASF (Advanced / Active Streaming Format)",
      "format_name": "asf",
      "nb_programs": 0,
      "nb_streams": 1,
      "probe_score": 100,
      "size": 10074453,
      "start_time": 0,
      "tags": Object {
        "compatible_brands": "mp42mp41isomavc1",
        "encoder": "Lavf58.26.101",
        "major_brand": "mp42",
        "minor_version": "0",
      },
    },
    "streams": Array [
      Object {
        "avg_frame_rate": "30/1",
        "bit_rate": "N/A",
        "bits_per_raw_sample": "N/A",
        "chroma_location": "unspecified",
        "closed_captions": 0,
        "codec_long_name": "Windows Media Video 8",
        "codec_name": "wmv2",
        "codec_tag": "0x32564d57",
        "codec_tag_string": "WMV2",
        "codec_time_base": "1/30",
        "codec_type": "video",
        "coded_height": 720,
        "coded_width": 1280,
        "color_primaries": "unknown",
        "color_range": "unknown",
        "color_space": "unknown",
        "color_transfer": "unknown",
        "display_aspect_ratio": "N/A",
        "disposition": Object {
          "attached_pic": 0,
          "clean_effects": 0,
          "comment": 0,
          "default": 0,
          "dub": 0,
          "forced": 0,
          "hearing_impaired": 0,
          "karaoke": 0,
          "lyrics": 0,
          "original": 0,
          "timed_thumbnails": 0,
          "visual_impaired": 0,
        },
        "duration": 14.6,
        "duration_ts": 14600,
        "field_order": "unknown",
        "has_b_frames": 0,
        "height": 720,
        "id": "N/A",
        "index": 0,
        "level": "-99",
        "max_bit_rate": "N/A",
        "nb_frames": "N/A",
        "nb_read_frames": "N/A",
        "nb_read_packets": "N/A",
        "pix_fmt": "yuv420p",
        "profile": "unknown",
        "r_frame_rate": "30/1",
        "refs": 1,
        "sample_aspect_ratio": "N/A",
        "start_pts": 0,
        "start_time": 0,
        "time_base": "1/1000",
        "timecode": "N/A",
        "width": 1280,
      },
    ],
  },
}
`;
